<resources>
    <string name="app_name">Rossy</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="unlock">Desbloquear</string>
    <string name="cancel">Cancelar</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="user">Nombre de usuario</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="update">Actualizar Datos</string>
    <string name="addTable">Agregar una mesa</string>
    <string name="capacity">Capacidad de la mesa</string>
    <string name="area">Area</string>
    <string name="navigation_drawer_open">Abrir la navegación</string>
    <string name="navigation_drawer_close">Cerrar la navegación</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <string-array name="seccionesArea">
        <item>Principal</item>
        <item>Adentro</item>
        <item>Afuera</item>
    </string-array>

    <string-array name="seccionesComida">
        <item>Entradas</item>
        <item>Especialidades</item>
        <item>Postres</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
